dropdown alignment issues fixed #10216

--- a/src/app/pages/diff-viewer/diff-viewer.component.scss
+++ b/src/app/pages/diff-viewer/diff-viewer.component.scss
@@ -267,3 +267,23 @@
       width: calc(100vw - 1170px);
   }
 }
+
+.slide-down-container {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-in-out;
+  }
+  
+  .slide-down-container.open {
+    max-height: 300px;
+    transition: max-height 0.5s ease-in;
+    overflow: visible; 
+  }
+  
+  .sticky-dropdown {
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+  }
+  
